minor: change Collection Map to Map